code inspection refactoring